# chrys-data-platform-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-19-snake-game-design.md
games/: README.md  index.html  package-lock.json  package.json  vite.config.js
games/src/: App.vue  router.js
games/src/components/: GameShell.vue
games/src/games/snake/: engine.js  engine.test.js  index.vue
games/src/views/: Home.vue
src/chrys_demo/: __init__.py  task_board.py
tests/: test_task_board.py
